resolve white space issue on iphone pwa

--- a/client/css/maptest.css
+++ b/client/css/maptest.css
@@ -15,6 +15,13 @@
   --brass-color: #F7C968;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
 body {
   margin: 0;
   overflow: hidden;
